# uiuc-datathon-2023

./: .gitignore  README.md  clean-survival.ipynb  environment.yml  flake.nix  local-survival.ipynb  logistic-regression.ipynb  logit.ipynb  macro_data_charge_off_mutual_info.ipynb  main.py  pyproject.toml  results_TRUE_POSITIVES.csv  sams-survival.ipynb  survival_analysis.ipynb  survival_numerical_cat_macro.ipynb  survival_numerical_cat_macro_v2.ipynb
data/: data_descriptions.txt  training_columns.txt
