[tool.poetry]
name = "datathon"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
modin = {extras = ["dask"], version = "^0.19.0"}
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
ray = "^2.3.1"
tqdm = "^4.65.0"
charmonium-cache = "^1.3.0"
typing-extensions = "^4.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
